--- a/index.html
+++ b/index.html
@@ -3,7 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>دفتر المتابعة - تطبيق المعلم الذكي</title>
+    <title>دفتر المتابعة – تطبيق المعلم الذكي لإدارة الفصول والدرجات</title>
+
+    <!-- ✅ Meta SEO -->
+    <meta
+      name="description"
+      content="دفتر المتابعة هو تطبيق iOS ذكي للمعلمين لتنظيم الفصول وتسجيل الدرجات بسهولة. يدعم المزامنة عبر iCloud ويقدّم تجربة حديثة ومبسطة للمعلم."
+    />
+    <meta
+      name="keywords"
+      content="دفتر المتابعة, تطبيق معلم, درجات, متابعة الطلاب, iCloud, تعليم, معلمين"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://mutabaah.app/" />
+
+    <!-- ✅ Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ar_AR" />
+    <meta property="og:title" content="دفتر المتابعة – تطبيق المعلم الذكي" />
+    <meta
+      property="og:description"
+      content="التطبيق الذكي للمعلمين لإدارة الفصول والدرجات بسهولة عبر iCloud."
+    />
+    <meta property="og:url" content="https://mutabaah.app/" />
+    <meta property="og:image" content="https://mutabaah.app/icon.png" />
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="دفتر المتابعة – تطبيق المعلم الذكي" />
+    <meta
+      name="twitter:description"
+      content="إدارة الدرجات والفصول بسهولة وسرعة عبر iCloud."
+    />
+    <meta name="twitter:image" content="https://mutabaah.app/icon.png" />
+
+    <!-- ✅ Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "دفتر المتابعة",
+        "operatingSystem": "iOS",
+        "applicationCategory": "EducationApplication",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "5",
+          "ratingCount": "20"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0.00",
+          "priceCurrency": "USD"
+        },
+        "inLanguage": "ar",
+        "url": "https://mutabaah.app/",
+        "image": "https://mutabaah.app/icon.png",
+        "author": {
+          "@type": "Person",
+          "name": "Hadi Alharbi"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Mutabaah App"
+        },
+        "downloadUrl": "https://apps.apple.com/app/id6744749302"
+      }
+    </script>
 
     <!-- Tailwind -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -13,6 +78,8 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap"
       rel="stylesheet"
@@ -24,13 +91,10 @@
     x-data="{ show: false }"
     x-init="setTimeout(()=>show=true, 300)"
   >
-    <!-- هيدر -->
+    <!-- ✅ هيدر -->
     <header
       class="relative bg-gradient-to-br from-blue-800 via-indigo-800 to-purple-900 text-white overflow-hidden"
-      x-data="{show:false}"
-      x-init="setTimeout(()=>show=true,300)"
     >
-      <!-- تأثيرات خلفية -->
       <div class="absolute inset-0">
         <div
           class="absolute top-[-100px] left-[-100px] w-96 h-96 bg-blue-500/30 rounded-full blur-3xl animate-pulse"
@@ -43,48 +107,26 @@
         ></div>
       </div>
 
-      <!-- المحتوى -->
       <div class="relative z-10 container mx-auto text-center px-6 py-24">
-        <!-- أيقونة التطبيق -->
-        <div
-          class="relative inline-block mb-6"
-          x-show="show"
-          x-transition.scale.duration.1000
-        >
-          <div
-            class="absolute inset-0 bg-gradient-to-tr from-blue-400 to-indigo-500 rounded-3xl blur-xl opacity-70 animate-pulse"
-          ></div>
-          <img
-            src="icon.png"
-            alt="شعار التطبيق"
-            class="relative mx-auto w-28 h-28 rounded-3xl shadow-2xl border-4 border-white/20"
-          />
-        </div>
-
-        <!-- العنوان -->
-        <h1
-          class="text-4xl md:text-6xl font-extrabold tracking-tight mb-4 drop-shadow-lg"
-          x-show="show"
-          x-transition.opacity.duration.1200
-        >
+        <img
+          src="https://mutabaah.app/icon.png"
+          alt="شعار تطبيق دفتر المتابعة"
+          class="relative mx-auto w-28 h-28 rounded-3xl shadow-2xl border-4 border-white/20 mb-6"
+          loading="lazy"
+        />
+        <h1 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">
           دفتر المتابعة
         </h1>
-
-        <!-- الوصف -->
         <p
           class="text-lg md:text-xl text-white/90 max-w-2xl mx-auto leading-relaxed"
-          x-show="show"
-          x-transition.opacity.duration.1500
         >
           ✨ التطبيق الذكي للمعلمين لإدارة الفصول والدرجات بسهولة، تنظيم سلس،
-          وتجربة متطورة تدعم الإبداع والتفوق
+          وتجربة متطورة تدعم الإبداع والتفوق.
         </p>
-
-        <!-- زر CTA -->
-        <div class="mt-10" x-show="show" x-transition.opacity.duration.1800>
+        <div class="mt-10">
           <a
             href="https://apps.apple.com/app/id6744749302"
-            class="inline-block px-8 py-4 rounded-xl bg-gradient-to-r from-blue-500 to-indigo-600 text-lg font-bold shadow-xl hover:scale-105 transform transition"
+            class="inline-block px-8 py-4 rounded-xl bg-gradient-to-r from-blue-500 to-indigo-600 text-lg font-bold shadow-xl hover:scale-105 transition"
           >
             جرّبه الآن 🚀
           </a>
@@ -92,154 +134,99 @@
       </div>
     </header>
 
-    <!-- صور التطبيق -->
+    <!-- ✅ قسم الصور -->
     <section
       class="relative bg-gradient-to-br from-blue-50 via-white to-indigo-50 py-24 text-center"
-      x-data="{show:false}"
-      x-init="setTimeout(()=>show=true,300)"
     >
-      <!-- خلفية زخرفية ناعمة -->
-      <div class="absolute inset-0">
-        <div
-          class="absolute top-[-60px] left-[-60px] w-72 h-72 bg-blue-400/10 rounded-full blur-3xl"
-        ></div>
-        <div
-          class="absolute bottom-[-80px] right-[-80px] w-96 h-96 bg-indigo-500/10 rounded-full blur-3xl"
-        ></div>
-      </div>
+      <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-6">
+        📱 لقطات من التطبيق
+      </h2>
+      <p
+        class="text-gray-600 mb-14 max-w-2xl mx-auto text-lg md:text-xl leading-relaxed"
+      >
+        استعرض واجهات
+        <span class="text-blue-700 font-semibold">دفتر المتابعة</span>
+        على أجهزة iPhone وiPad مع تصميم أنيق وسلس.
+      </p>
 
-      <!-- المحتوى -->
-      <div class="relative z-10 container mx-auto px-6">
-        <!-- العنوان -->
-        <h2
-          class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-6 drop-shadow-sm"
-          x-show="show"
-          x-transition.opacity.duration.1000
-        >
-          📱 لقطات من التطبيق
-        </h2>
-        <p
-          class="text-gray-600 mb-14 max-w-2xl mx-auto text-lg md:text-xl leading-relaxed"
-          x-show="show"
-          x-transition.opacity.duration.1200
-        >
-          استعرض جمال واجهات
-          <span class="text-blue-700 font-semibold">دفتر المتابعة</span>
-          عبر أجهزة آيفون وآيباد مع تجربة بصرية سلسة ومنسقة
-        </p>
-
-        <!-- شبكة الصور -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-          <!-- العمود الأول: صورتين فوق بعض -->
-          <div class="flex flex-col gap-12">
-            <!-- صورة الأيقونات -->
-            <div
-              class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
-              x-show="show"
-              x-transition:enter="transition transform duration-1000"
-              x-transition:enter-start="opacity-0 -translate-y-10 scale-90"
-              x-transition:enter-end="opacity-100 translate-y-0 scale-100"
-            >
-              <img
-                src="view_iphone.png"
-                alt="صورة الأيقونات"
-                class="rounded-xl mx-auto shadow-md"
-              />
-            </div>
-
-            <!-- صورة الآيباد -->
-            <div
-              class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
-              x-show="show"
-              x-transition:enter="transition transform duration-1000 delay-300"
-              x-transition:enter-start="opacity-0 translate-x-10 scale-90"
-              x-transition:enter-end="opacity-100 translate-x-0 scale-100"
-            >
-              <img
-                src="ipad.png"
-                alt="صورة الآيباد"
-                class="rounded-xl mx-auto shadow-md"
-              />
-            </div>
-          </div>
-
-          <!-- العمود الثاني: صورة الآيفون -->
-          <div
-            class="bg-white rounded-3xl shadow-2xl p-6 border border-gray-100 md:scale-105 md:z-10"
-            x-show="show"
-            x-transition:enter="transition transform duration-1000 delay-500"
-            x-transition:enter-start="opacity-0 translate-y-10 scale-75"
-            x-transition:enter-end="opacity-100 translate-y-0 scale-100"
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center container mx-auto px-6"
+      >
+        <div class="flex flex-col gap-12">
+          <figure
+            class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
           >
             <img
-              src="iphone.png"
-              alt="صورة الآيفون"
-              class="rounded-xl mx-auto shadow-lg"
+              src="https://mutabaah.app/view_iphone.png"
+              alt="واجهة التطبيق على الآيفون"
+              class="rounded-xl mx-auto shadow-md"
+              loading="lazy"
             />
-          </div>
+            <figcaption class="sr-only">واجهة التطبيق على الآيفون</figcaption>
+          </figure>
+          <figure
+            class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
+          >
+            <img
+              src="https://mutabaah.app/ipad.png"
+              alt="عرض التطبيق على الآيباد"
+              class="rounded-xl mx-auto shadow-md"
+              loading="lazy"
+            />
+            <figcaption class="sr-only">عرض التطبيق على الآيباد</figcaption>
+          </figure>
         </div>
+        <figure
+          class="bg-white rounded-3xl shadow-2xl p-6 border border-gray-100 md:scale-105 md:z-10"
+        >
+          <img
+            src="https://mutabaah.app/iphone.png"
+            alt="واجهة التطبيق الرئيسية"
+            class="rounded-xl mx-auto shadow-lg"
+            loading="lazy"
+          />
+          <figcaption class="sr-only">واجهة التطبيق الرئيسية</figcaption>
+        </figure>
       </div>
     </section>
 
-    <!-- زر التنزيل -->
+    <!-- ✅ قسم التنزيل -->
     <section
       class="relative bg-gradient-to-r from-blue-600 to-indigo-700 py-24 text-center text-white overflow-hidden"
-      x-data="{show:false}"
-      x-init="setTimeout(()=>show=true,300)"
     >
-      <!-- خلفية متحركة -->
-      <div class="absolute inset-0">
-        <div
-          class="absolute w-96 h-96 bg-white/10 rounded-full blur-3xl top-[-100px] left-[-100px] animate-pulse"
-        ></div>
-        <div
-          class="absolute w-72 h-72 bg-indigo-400/20 rounded-full blur-2xl bottom-[-80px] right-[-80px] animate-ping"
-        ></div>
-      </div>
+      <h2 class="text-3xl md:text-4xl font-extrabold mb-4">
+        نزّل التطبيق الآن وابدأ رحلتك 🚀
+      </h2>
+      <p class="text-lg text-white/80 mb-10 max-w-2xl mx-auto">
+        احصل على دفتر المتابعة لتجربة تعليمية أسهل، أسرع، وأكثر تنظيمًا. كل شيء
+        في مكان واحد.
+      </p>
 
-      <!-- المحتوى -->
-      <div class="relative z-10 container mx-auto px-6">
-        <h2
-          class="text-3xl md:text-4xl font-extrabold mb-4"
-          x-show="show"
-          x-transition.opacity.duration.1000
-        >
-          نزّل التطبيق الآن وابدأ رحلتك 🚀
-        </h2>
-        <p
-          class="text-lg text-white/80 mb-10 max-w-2xl mx-auto"
-          x-show="show"
-          x-transition.opacity.duration.1200
-        >
-          احصل على دفتر المتابعة لتجربة تعليمية أسهل، أسرع، وأكثر تنظيمًا. كل
-          شيء في مكان واحد.
-        </p>
+      <a
+        href="https://apps.apple.com/app/id6744749302"
+        class="inline-block transform hover:scale-105 transition duration-300"
+      >
+        <img
+          src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+          alt="تحميل تطبيق دفتر المتابعة من App Store"
+          class="mx-auto w-48 md:w-56"
+          width="180"
+          height="60"
+        />
+      </a>
 
-        <!-- زر التنزيل -->
-        <a
-          href="https://apps.apple.com/app/id6744749302"
-          class="inline-block transform hover:scale-105 transition duration-300"
-          x-show="show"
-          x-transition.scale.duration.1000.delay-300
-        >
-          <img
-            src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
-            alt="Download on App Store"
-            class="mx-auto w-48 md:w-56"
-          />
-        </a>
-      </div>
       <p class="mt-5">© 2025 دفتر المتابعة. جميع الحقوق محفوظة.</p>
-
-      <!-- روابط السياسة -->
-      <div class="mt-6 flex justify-center gap-8 text-sm">
+      <nav
+        class="mt-6 flex justify-center gap-8 text-sm"
+        aria-label="روابط سياسة الخصوصية"
+      >
         <a href="/privacy-policy.html" class="underline hover:text-gray-200"
           >سياسة الخصوصية</a
         >
         <a href="/eula.html" class="underline hover:text-gray-200"
           >شروط الاستخدام</a
         >
-      </div>
+      </nav>
     </section>
   </body>
 </html>
